--- a/Grocery.App/Views/GroceryListsView.xaml
+++ b/Grocery.App/Views/GroceryListsView.xaml
@@ -6,8 +6,21 @@
              xmlns:m="clr-namespace:Grocery.Core.Models;assembly=Grocery.Core"
              Title="GroceryListsView">
     <Shell.TitleView>
-        <Grid>
-            <Label Text="Boodschappenlijsten" FontSize="Large" HorizontalOptions="Center" VerticalOptions="Center" />
+        <Grid ColumnDefinitions="*,*" Padding="10" VerticalOptions="Center">
+            <Label Grid.Column="0"
+                   Text="Boodschappenlijsten"
+                   FontSize="22"
+                   FontAttributes="Bold"
+                   HorizontalOptions="Start"
+                   VerticalTextAlignment="Center"
+                   TextColor="#1E293B"/>
+
+            <Label Grid.Column="1"
+                   Text="{Binding LoggedInUserName, StringFormat='Welkom, {0}'}"
+                   FontSize="18"
+                   HorizontalOptions="End"
+                   VerticalTextAlignment="Center"
+                   TextColor="#6B7280"/>
         </Grid>
     </Shell.TitleView>
 
@@ -34,7 +47,7 @@
                         </Grid.ColumnDefinitions>
                         <Label Grid.Column="0" Text="{Binding Name}"/>
                         <Label Grid.Column="1" Text="{Binding Date}" HorizontalOptions="End" Margin="0,0,10,0"/>
-                        <Rectangle Grid.Column="2" BackgroundColor="{Binding Color}" WidthRequest="15" HeightRequest="15" />
+                        <BoxView Grid.Column="2" Color="{Binding Color}" WidthRequest="15" HeightRequest="15" />
                     </Grid>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
